--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ button{
     font-size: 25px;
 }
 
+#answer{
+    background-color: rgba(151, 180, 252, 0.26);
+}
+
 #notBegun{
     font-size: 50px;
 }
